# rsb-tutorials

./: CMakeLists.txt
chat-1/cl/project/: chat-1.asd  chat.lisp  package.lisp
chat-1/cl/solution/: chat-1.asd  chat.lisp  package.lisp
chat-1/cpp/project/: CMakeLists.txt
chat-1/cpp/project/src/: chat-1.cpp
chat-1/cpp/solution/: CMakeLists.txt
chat-1/cpp/solution/src/: chat-1.cpp
chat-1/java/project/: build.properties  build.xml  run.sh
chat-1/java/project/src/: Chat1.java
chat-1/java/project/src/chat1/: Chat1.java
chat-1/java/solution/: build.properties  run.sh
chat-1/java/solution/src/chat1/: Chat1.java
chat-1/python/project/: chat1.py
chat-1/python/solution/: chat1.py
chat-2/cl/project/: avatar.lisp  chat-2.asd
chat-2/cl/solution/: avatar.lisp  chat-2.asd
chat-2/cpp/project/: CMakeLists.txt
chat-2/cpp/project/src/: chat.cpp
chat-2/cpp/solution/: CMakeLists.txt
chat-2/cpp/solution/src/: chat.cpp
chat-2/java/project/: build.xml
chat-2/java/project/src/: AvatarServer.java
chat-2/java/project/src/chat2/: AvatarServer.java  Chat1.java
chat-2/java/solution/: build.properties
chat-2/java/solution/src/chat2/: AvatarServer.java
chat-2/python/solution/: chat2.py
slides/: slides.org  slides.tex
